Fix spacing on event detail buttons

--- a/thinkingweekly/assets/stylesheets/app/thinkingliverpool.scss
+++ b/thinkingweekly/assets/stylesheets/app/thinkingliverpool.scss
@@ -186,6 +186,10 @@ section.venue-future-events a {
     }
   }
 
+  a.view-on-external-site {
+    margin-bottom: ($line-height-computed / 2);
+  }
+
   .twitter-share-box {
     a.twitter-share-button {
       margin-top: ($line-height-computed / 2);
